--- a/styles.css
+++ b/styles.css
@@ -2,14 +2,14 @@ nav {
 
 padding: 0;
 margin: 0;
-text_align: center;
+text-align: center;
 }
 
 h1 {
 
 color: red;
 font-size: 30px;
-text_align: justify;
+text-align: justify;
 
 }
 
@@ -17,7 +17,7 @@ h2 {
 
 color: green;
 font-size: 25px;
-text_align: justify;
+text-align: justify;
 
 }
 
@@ -76,6 +76,25 @@ Th {
 	text-align : justify;
 	}
 		
+	nav ul li {
+		flex: 1 1 auto;
+		text-align:center;
+		position: relative
+	}
+	nav ul{
+		list-style-type: none;
+	}
+
+	nav > ul li:hover .sous {
+		display: flex;
+		flex-flow: column wrap;
+
+	}
+
+	.sous li{
+		flex: 1 1 auto;
+		text-align: left;
+	}
 		nav a{
 		display: inline block;
 		margin: 0 40 3 40px; /*haut bas droite gauche*/
@@ -88,7 +107,7 @@ Th {
 		padding: 0 50px;
 		font-family: Arial;
 		font-size: 20px;
-		text-align: center;
+		text-align:center;
 	    }
 		
 		footer {
@@ -98,8 +117,63 @@ Th {
 			padding: 30px;
 			margin-left: auto;
 		}
+
+		fieldset {
+			margin-bottom: 15px;
+			padding: 10px;
+			width: 60%;
+			margin-left: auto;
+			margin-right: auto;
+			border-color: green;
+			font-family:fantasy;
+			color:darkblue;
+			background-color: #F2ED44;
+		}
+
+		legend {
+			padding: 0px 3px;
+			font-weight: bold;
+			font-variant: small-caps;
+		}
+
+		label {
+			width: 110px;
+			display: inline-block;
+			vertical-align: top;
+			margin: 6px;
+			
+		}
+
+		em {
+			font-weight: bold;
+			font-style: normal;
+			color: #f00;
+		}
+
+		input {
+			vertical-align: baseline;
+			padding: 2px;
+			margin: 2px;
+		}
+
+		textarea {
+
+			height: 100px;
+			width: 300px;
+			border-color: purple;
+
+		}
+
+		#submit {
+
+		height: 50px;
+		width: 100px;
+		font-family:fantasy;
+		vertical-align: baseline;
+		font-style:normal;
+		color: darkblue;
+		border-color: green;
+		background-color: lightblue;
 		
-		#p2 {
-			font-size : 20px;
-			color : yellow;
+
 		}
